# azure-cosmos-rust-nosql-api-samples

./: .gitignore  README.md
advanced-samples/cli/: Cargo.toml
advanced-samples/cli/src/: main.rs
basic-samples/: Cargo.toml
basic-samples/container-crud/: Cargo.toml
basic-samples/container-crud/src/: main.rs
basic-samples/crud-quickstart/: Cargo.toml
basic-samples/crud-quickstart/src/: main.rs
basic-samples/document-crud/: Cargo.toml
basic-samples/document-crud/src/: main.rs
cli-sample/cli/src/: main.rs
