[package]
name = "container-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_data_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_data_cosmos" }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_identity" }
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust.git", package = "azure_core" }
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"  
tokio = { version = "1", features = ["full"] }  # for async support
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
serde_json = "1.0"                                  # For working with JSON data
futures = "0.3"   

[features]
key_auth = []  # Optional feature for key-based authentication
